<?xml version="1.0" encoding="utf-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
    <modelVersion>4.0.0</modelVersion>  
    <groupId>com.csz</groupId>  
    <artifactId>dubbo-practise</artifactId>  
    <version>0.0.1</version>  
    <packaging>pom</packaging>
    <name>dubbo-practise</name>  
    <modules> 
        <module>dubbo-provider</module>
        <module>dubbo-consumer</module> 
        <module>service-rpc-api</module>
        <module>service-rpc-impl</module>
        <module>dubbo-2.5.5-official</module>
        <module>dubbo-web-console</module>
        <module>self-rpc</module>
    </modules>

    <!-- 统一版本号、参数等管理 -->
    <properties>
        <jdk.version>1.8</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

        <google.guava.version>19.0</google.guava.version>
        <org.slf4j.version>1.7.21</org.slf4j.version>
        <apache.log4j2.version>2.5</apache.log4j2.version>
        <junit.version>4.12</junit.version>

        <esotericsoftware.kryo.version>2.24.0</esotericsoftware.kryo.version>
        <javakaffee.kryo.serializers.version>0.26</javakaffee.kryo.serializers.version>
        <org.zookeeper.version>3.4.6</org.zookeeper.version>

        <project.version>0.0.1</project.version>
        <!--<alibaba.dubbo.version>2.8.4.2</alibaba.dubbo.version>-->
        <alibaba.dubbo.version>2.5.5</alibaba.dubbo.version>
        <zkclient.version>0.10</zkclient.version>
        <spring.version>4.3.14.RELEASE</spring.version>

        <!-- Common libs -->
        <!-- from dubbo-admin -->
        <spring_version>4.3.10.RELEASE</spring_version>
        <javassist_version>3.20.0-GA</javassist_version>
        <netty_version>3.2.5.Final</netty_version>
        <mina_version>1.1.7</mina_version>
        <grizzly_version>2.1.4</grizzly_version>
        <httpclient_version>4.5.3</httpclient_version>
        <hessian_lite_version>3.2.6</hessian_lite_version>
        <xstream_version>1.4.1</xstream_version>
        <fastjson_version>1.2.31</fastjson_version>
        <bsf_version>3.1</bsf_version>
        <sorcerer_version>0.8</sorcerer_version>
        <zookeeper_version>3.4.9</zookeeper_version>
        <zkclient_version>0.2</zkclient_version>
        <curator_version>2.12.0</curator_version>
        <jedis_version>2.9.0</jedis_version>
        <xmemcached_version>1.3.6</xmemcached_version>
        <cxf_version>3.0.14</cxf_version>
        <thrift_version>0.8.0</thrift_version>
        <jfreechart_version>1.0.13</jfreechart_version>
        <hessian_version>4.0.38</hessian_version>
        <servlet_version>2.5</servlet_version>
        <jetty_version>6.1.26</jetty_version>
        <validation_version>1.1.0.Final</validation_version>
        <hibernate_validator_version>5.4.1.Final</hibernate_validator_version>
        <jel_version>3.0.1-b08</jel_version>
        <jcache_version>1.0.0</jcache_version>
        <sca_version>2.0-M5.1</sca_version>
        <guice_version>3.0</guice_version>
        <cglib_version>2.2</cglib_version>
        <webx_version>3.0.8</webx_version>
        <!-- Log libs -->
        <slf4j_version>1.7.25</slf4j_version>
        <jcl_version>1.2</jcl_version>
        <log4j_version>1.2.16</log4j_version>
        <logback_version>1.2.2</logback_version>
        <!-- Test libs -->
        <junit_version>4.12</junit_version>
        <easymock_version>3.4</easymock_version>
        <jmockit_version>1.33</jmockit_version>
        <!-- Build args -->
        <argline>-server -Xms64m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
            -Djava.net.preferIPv4Stack=true
        </argline>
        <skip_maven_deploy>false</skip_maven_deploy>
        <updateReleaseInfo>true</updateReleaseInfo>
        <project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>

        <profile.name>oss</profile.name>

        <!-- for maven compiler plugin -->
        <java_source_version>1.6</java_source_version>
        <java_target_version>1.6</java_target_version>
        <file_encoding>UTF-8</file_encoding>


    </properties>

    <dependencyManagement>

        <dependencies>

            <dependency>
                <groupId>com.csz</groupId>
                <artifactId>dubbo-provider</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.csz</groupId>
                <artifactId>dubbo-consumer</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.csz</groupId>
                <artifactId>service-rpc-api</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>com.csz</groupId>
                <artifactId>service-rpc-impl</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>dubbo</artifactId>
                <version>${alibaba.dubbo.version}</version>
            </dependency>


            <dependency>
                <groupId>com.101tec</groupId>
                <artifactId>zkclient</artifactId>
                <version>${zkclient.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aop</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-expression</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <!-- serialization -->
            <dependency>
                <groupId>com.esotericsoftware.kryo</groupId>
                <artifactId>kryo</artifactId>
                <version>${esotericsoftware.kryo.version}</version>
            </dependency>
            <dependency>
                <groupId>de.javakaffee</groupId>
                <artifactId>kryo-serializers</artifactId>
                <version>${javakaffee.kryo.serializers.version}</version>
            </dependency>

            <dependency>
                <groupId>de.ruedigermoeller</groupId>
                <artifactId>fst</artifactId>
                <version>1.55</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.9.10.4</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.9.9</version>
            </dependency>


        </dependencies>

    </dependencyManagement>

    <build> 
        <finalName>dubbo-practise</finalName>  
        <plugins> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-compiler-plugin</artifactId>  
                <version>2.5.1</version>  
                <configuration>
                    <source>1.7</source>
                    <encoding>UTF8</encoding>  
                    <target>1.7</target>
                </configuration> 
            </plugin> 
        </plugins>  
        <resources> 
            <resource> 
                <directory>src/main/resources</directory>  
                <filtering>true</filtering> 
            </resource> 
        </resources> 
    </build>  
    <profiles> 
        <profile> 
            <id>dev</id>  
            <properties> 
                <env>dev</env> 
            </properties> 
        </profile>  
        <profile> 
            <id>std-test</id>  
            <properties> 
                <env>std-test</env> 
            </properties> 
        </profile>  
        <profile> 
            <id>product</id>  
            <properties> 
                <env>product</env> 
            </properties> 
        </profile> 
    </profiles> 
</project>
